# ckanext-observability

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ckanext/observability/: plugin.py
