[metadata]
name = ckanext-observablity
version = 0.0.1
description = Obser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scastineyras/ckanext-observablity
author = Sergio Castineyras
author_email = scastineyras@opengov.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.9
keywords = CKAN otel

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             observablity = ckanext.observablity.plugin:ObservablityPlugin

